public/stylesheets/style.css
#container {
	background: #f7f6f6;
	margin:0 auto;
	text-align: left;
	width: 960px;
}

#header {
	background: url('/images/logo_sepia.jpg'); /* from http://www.flickr.com/photos/zoriah/3487507132/sizes/o/ */
	height: 212px;
	margin: 0;
	padding: 0;
}

#logo {
	float: left;
	padding: 0;
}

#logo h1 a {
	color:#ffffff;
	font-family: 'Reenie Beanie', arial, serif;
	font-size: 70px;
	letter-spacing:3px;
	margin: 30px;
	text-shadow: 2px 2px 2px #331200;
}

#registration {
	float: right;
}

#registration a {
	opacity: 0.9;
	filter: alpha(opacity=90);
}

#registration a:hover {
	opacity: 1.0;
	filter: alpha(opacity=100);
}

#subheader {
	padding: 10px;
	background: #331200;
}

#search_area {
	text-align: center;
}

#content {
	border: 1px solid #331200;
	padding: 15px;
}

#content * {
	color: #331200;
}

#content input[type="text"],
#content textarea {
	border: 1px solid #331200;
}

#organizations {
	overflow: hidden;
}

#organizations div.organization {
	background: #dac9a8;
	border: 1px solid #8c2727;
	color: #8c2727;
	line-height: 5px;
	margin: 10px;
	padding: 10px;
	width: 400px;
	border-radius: 5px;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
}

#organizations div.organization:hover {
	background: #e4d5b7;
	border: 1px solid #962626;
	color: #962626;
}

#organizations div.organization h2 {
	margin: 5px;
}

#organizations div.left {
	float: left;
}

#organizations div.right {
	float: right;
}

#search_query {
	width: 600px;
	-webkit-border-top-right-radius: 0px;
	-webkit-border-bottom-right-radius: 0px;
	-moz-border-radius-topright: 0px;
	-moz-border-radius-bottomright: 0px;
	border-top-right-radius: 0px;
	border-bottom-right-radius: 0px;
}

#search {
	-webkit-border-top-left-radius: 0px;
	-webkit-border-bottom-left-radius: 0px;
	-moz-border-radius-topleft: 0px;
	-moz-border-radius-bottomleft: 0px;
	border-top-left-radius: 0px;
	border-bottom-left-radius: 0px;
}

#footer {
	height: 10px;
	background: #34150a;
	-webkit-border-bottom-left-radius: 5px;
	-webkit-border-bottom-right-radius: 5px;
	-moz-border-radius-bottomleft: 5px;
	-moz-border-radius-bottomright: 5px;
	border-bottom-left-radius: 5px;
	border-bottom-right-radius: 5px;
}

body {
	background: #eeede2;
	font-family: 'Cantarell', arial, serif;
	margin: 0;
	padding: 0;
	text-align: center;
}

table {
	border-collapse: collapse;
}

td {
	padding: 0;
}

a {
	color:#700B00;
	background-color:transparent;
	text-decoration:none;
}

a:hover {
	background-color:transparent
	color:#333333;
}

a.link {
	background-color:#ffffff;
	margin: 5px;
	padding: 5px;
	border-radius: 5px;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
}

input {
	height: 30px;
}

textarea {
	height: 150px;
}

input,
textarea {
	border: none;
	font-family: 'Cantarell', arial, serif;
	font-size: 16px;
	margin: 0;
	border-radius: 5px;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
}

input[type="text"],
textarea {
	color: #331200;
	padding: 0 5px;
	width: 250px;
}

input[type="submit"],
input[type="button"],
input[type="reset"] {
	background: #e4d5b7;
	color: #331200;
	font-weight: bold;
}


input[type="submit"] {
	cursor: pointer;
	opacity: 0.8;
	filter: alpha(opacity=80);
}

input[type="submit"]:hover {
	opacity: 1.0;
	filter: alpha(opacity=100);
}

p {
	margin: 0;
	padding: 5px;
}

